<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_map"/>
        <item
            android:id="@+id/nav_detect"
            android:icon="@drawable/ic_camara"
            android:title="@string/menu_detect"/>
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_perfil"
            android:title="@string/menu_profile"/>
        <item
            android:id="@+id/nav_recorrido"
            android:icon="@drawable/ic_recorrido"
            android:title="@string/menu_recorrido"/>
        <item
            android:id="@+id/nav_shared"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_shared"/>
        <item
            android:id="@+id/nav_historial"
            android:icon="@drawable/ic_historial"
            android:title="@string/menu_historial"/>
    </group>
</menu>